--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Blood donation management </title>
-<link rel="stylesheet" href="project.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div>
