--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div>
-<section class="header">
+<header>
 <nav>
     <a href="project.html"><img src="images/logo1.png"></a>
 	<div class="nav-links">
@@ -19,7 +19,7 @@
 	</ul>
 	</div>
 </nav>
-</section>
+</header>
 </div>
 <div class="text-box">
 	<h1>Online-based platform to<br> connect blood searcher with donor</h1>
