--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> About </title>
-	<link rel="stylesheet" href="about.css">
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 	<div class="about">
