--- a/index.html
+++ b/index.html
@@ -1,83 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Blood donation management </title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<div>
-<header>
-<nav>
-    <a href="project.html"><img src="images/logo1.png"></a>
-	<div class="nav-links">
-	<ul>
-	<li><a href="">HOME</a></li>
-	<li><a href="">ABOUT</a></li>
-	<li><a href="">SEARCH DONOR</a></li>
-	<li><a href="">REGISTER</a></li>
-	<li><a href="">LOG IN</a></li>
-	</ul>
-	</div>
-</nav>
-</header>
-</div>
-<div class="text-box">
-	<h1>Online-based platform to<br> connect blood searcher with donor</h1>
-	<p>Donate-Blood is a real-time free platform to help<br> blood searchers connect 
-	voluntary blood donors around Bangladesh.</p>
-	<a href="">Join as Donor</a>
-	<a href="">Search Donor</a>
-</div>
-<div class="about">
-	<h1> About Us</h1>
-	<p> Donate-Blood is an automated blood service that connects blood searchers with <br>
-		voluntary blood donors in a moment through SMS. Donate-Blood is a not-for-profit<br>
-		 initiative to aware people of voluntary blood donation in Bangladesh.</p>
-		 <a href=""> Learn More </a>
-</div>
-<div class="search">
-	<h1> Search Donor</h1>
-	<form>
-		<level for="Blood Group">Blood Group</level>
-		<br>
-		<select name="select" id="select">
-			<option value="A+"> A+ </option>
-			<option value="A-"> A- </option>
-			<option value="B+"> B+ </option>
-			<option value="B-"> B- </option>
-			<option value="O+"> O+ </option>
-			<option value="O-"> O- </option>
-			<option value="AB+">AB+ </option>
-		</select>
-        </form>
-        <form>
-		<level for="District">District</level>
-		<br>
-		<select name="select" id="select">
-			<option value="Dhaka"> Dhaka </option>
-			<option value="Dinajpur"> Dinajpur </option>
-			<option value="Feni"> Feni </option>
-			<option value="Chattogram"> Chattogram </option>
-			<option value="Rangpur"> Rangpur </option>
-			<option value="Jashore"> Jashore </option>
-			<option value="Sylhet">Sylhet </option>
-			<option value="Mymensingh"> Mymensingh </option>
-			<option value="Cumilla"> Cumilla </option>
-            <option value="Faridpur"> Faridpur </option>
-			<option value="Noakhali"> Noakhali </option>
-			<option value="Pabna"> Pabna </option>
-			<option value="Kushtia"> Kushtia </option>
-			<option value="Tangail"> Tangail  </option>
-			<option value="Patuakhali"> Patuakhali </option>
-			<option value="Jamalpur"> Jamalpur </option>
-		</select>
-	</form>
-	        <form>
-            <label for="Date of Blood Donation">Date of Blood Donation:</label>
-            <br>
-            <input type="date" id="Date of Blood Donation" name="Date of Blood Donation">
-            <button type="search" class="button"> search here</button>
-   </form>
-</div>
-</body>
+  <head>
+    <title>Blood donation management</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <a class="header-logo" href="project.html"
+          ><img src="images/logo1.png"
+        /></a>
+        <ul>
+          <li class="nav-links"><a href="">HOME</a></li>
+          <li class="nav-links"><a href="">ABOUT</a></li>
+          <li class="nav-links"><a href="">SEARCH DONOR</a></li>
+          <li class="nav-links"><a href="">REGISTER</a></li>
+          <li class="nav-links"><a href="">LOG IN</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="main-section">
+      <div class="container">
+        <h1 class="main-section-title">
+          Online-based platform to<br />
+          connect blood searcher with donor
+        </h1>
+        <p class="main-section-desc">
+          Donate-Blood is a real-time free platform to help<br />
+          blood searchers connect voluntary blood donors around Bangladesh.
+        </p>
+        <div class="main-section-btn">
+          <a href="">Join as Donor</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
