--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> Register </title>
-		<link rel="stylesheet" href="register.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div class="register">
