index.html file home page changed

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
 
     <div class="main-section">
       <div class="container">
-        <h1 class="main-section-title">
-          Online-based platform to<br />
-          connect blood searcher with donor
-        </h1>
-        <p class="main-section-desc">
-          Donate-Blood is a real-time free platform to help<br />
-          blood searchers connect voluntary blood donors around Bangladesh.
-        </p>
-        <div class="main-section-btn">
-          <a href="">Join as Donor</a>
+        <div class="main-box">
+          <h1 class="main-section-title">
+            Online-based platform to<br />
+            connect blood searcher with donor
+          </h1>
+          <p class="main-section-desc">
+            Donate-Blood is a real-time free platform to help<br />
+            blood searchers connect voluntary blood donors around Bangladesh.
+          </p>
+          <div class="main-section-btn">
+            <a href="">Join as Donor</a>
+          </div>
         </div>
       </div>
     </div>
