register-form changed of ui and dtls

--- a/register.html
+++ b/register.html
@@ -4,23 +4,28 @@
 		<title> Register </title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body>
+	<body class="expln">
 		<div class="register">
 			<h1> Register on Donate Blood</h1>
 			<p> register available on all online plateform </p>
 		</div>
-		<div class="body">
-				<h2> REGISTER HERE </h2>
-				<div class="input">
-				<div class="inpuT"> <input  type="name"; placeholder="First Name" /> </div>
-			    <div class="inpuT"> <input  type="name"; placeholder="Last Name" /> </div>
-				<div class="inpuT"> <input  type="number"; placeholder="Mobile" /> </div>
-				<div class="inpuT"> <input  type="date"; placeholder="Date of Birth" /> </div>
-				<div class="inpuT"> <input type="email"; placeholder="E-mail"></div>
-				<div class="inpuT"> <input type="password"; placeholder="Password"></div>
-				<div class="inpuT"> <input type="password"; placeholder="Confirm password"></div>
-				<button class="button"> Register </button>
+		<div class="register-form">
+			<h2>REGISTER HERE</h2>
+			<div class="input-group">
+				<div class="input-field"> <input  type="name"; placeholder="First Name" /> </div>
+				<div class="input-field"> <input  type="name"; placeholder="Last Name" /> </div>
 			</div>
+			<div class="input-group">
+				<div class="input-field"> <input class="input-field" type="date"; placeholder="Date of Birth" /> </div>
+				<div class="input-field"> <input  type="text"; placeholder="Mobile" /> </div>
+			</div>	
+			<div class="input-group-full" >
+			<input class="input-field" type="email" placeholder="E-mail">
+			<input class="input-field" type="password" placeholder="Password">
+			 <input class="input-field" type="password" placeholder="Confirm password">
+			</div>
+			<button class="button"> Register </button>
+
 		</div>
 	</body>
 </html>
