--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
           ><img src="images/logo1.png"
         /></a>
         <ul>
-          <li class="nav-links"><a href="">HOME</a></li>
-          <li class="nav-links"><a href="">ABOUT</a></li>
+          <li class="nav-links"><a href="index.html">HOME</a></li>
+          <li class="nav-links"><a href="about.html">ABOUT</a></li>
           <li class="nav-links"><a href="">SEARCH DONOR</a></li>
-          <li class="nav-links"><a href="">REGISTER</a></li>
+          <li class="nav-links"><a href="register.html">REGISTER</a></li>
           <li class="nav-links"><a href="">LOG IN</a></li>
         </ul>
       </nav>
