--- a/register.html
+++ b/register.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Register </title>
+		<title> Register form</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body class="expln">
 		<div class="register">
 			<h1> Register on Donate Blood</h1>
 			<p> register available on all online plateform </p>
+		</div>
+		<div class="design-box">
+		<div class="img-box">
+			<img src="images/img3.png">
 		</div>
 		<div class="register-form">
 			<h2>REGISTER HERE</h2>
@@ -25,7 +29,8 @@
 			 <input class="input-field" type="password" placeholder="Confirm password">
 			</div>
 			<button class="button"> Register </button>
-
 		</div>
+        </div>
+
 	</body>
 </html>
