login form and css updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li class="nav-links"><a href="about.html">ABOUT</a></li>
           <li class="nav-links"><a href="">SEARCH DONOR</a></li>
           <li class="nav-links"><a href="register.html">REGISTER</a></li>
-          <li class="nav-links"><a href="">LOG IN</a></li>
+          <li class="nav-links"><a href="login.html">LOG IN</a></li>
         </ul>
       </nav>
     </header>
