--- a/login.html
+++ b/login.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Login form</title>
+		<title> Register form</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body class="login">
-		<div class="header">
+	<body class="expln">
+		<div class="register">
 			<h1> Login on Donate Blood</h1>
-			<p> login available on all online plateform </p>
+			<p> Login available on all online plateform </p>
 		</div>
-		<div class="login-design-box">
-		<div class="login-imgbox">
+		<div class="design-box">
+		<div class="img-box">
 			<img src="images/img3.png">
 		</div>
-		<div class="login-form">
-			<h2>LOG IN</h2>	
-			<div class="login-input-group-full" >
-			<level>E-mail<input class="login-input-field" type="email" placeholder="E-mail"></level>
-			<level>Password<input class="login-input-field" type="password" placeholder="Password"></level>
-			<level><input class="login-input-field" type="checkbox" name="">Remember me</level>
+		<div class="register-form">
+			<h2>LOGIN HERE</h2>
+			<div class="input-group-full" >
+			<input class="input-field" type="email" placeholder="E-mail">
+			<input class="input-field" type="password" placeholder="Password">
 			</div>
 			<button class="button"> Login </button>
-           </div>
+			<a style="text-align: center;text-decoration: underline;display: block;"  href="register.html">Create A New Account?</a>
 		</div>
+        </div>
+
 	</body>
 </html>
